src/objects/Debouncer__c.object
<CustomObject>
    <fields>
        <fullName>DebouncerConfiguration__c</fullName>
        <label>Debouncer Configuration</label>
        <referenceTo>DebouncerConfiguration__c</referenceTo>
        <relationshipLabel>Debouncers</relationshipLabel>
        <relationshipName>Debouncers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastFiredDate__c</fullName>
        <label>Last Fired Date</label>
        <type>DateTime</type>
    </fields>
    <label>Debouncer</label>
    <nameField>
        <displayFormat>D-{0000000000}</displayFormat>
        <label>Debouncer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debouncers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>